saude-homolog-isac-bigdata/kafka-connect-debezium.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect-debezium-isac
  namespace: cuidar-isac-hml
  labels:
    app: kafka-connect-debezium-isac
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-connect-debezium-isac
  template:
    metadata:
      labels:
        app: kafka-connect-debezium-isac
    spec:
      containers:
        - name: kafka-connect-debezium-isac
          image: confluentinc/cp-kafka-connect:7.5.0
          ports:
            - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /connectors
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: plugins-volume
              mountPath: /kafka/connect/plugins
      volumes:
        - name: plugins-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect-debezium-isac
  namespace: cuidar-isac-hml
spec:
  selector:
    app: kafka-connect-debezium-isac
  ports:
    - port: 8083
      targetPort: 8083
      nodePort: 30085
  type: NodePort
