saude-homolog-isac-bigdata/kafka-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: cuidar-isac-hml
spec:
  type: ExternalName
  externalName: kafka.saude-kafka-bigdata.svc.cluster.local
  ports:
    - port: 9092
      targetPort: 9092
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kafka
  namespace: cuidar-isac-hml
subsets:
  - addresses:
      - ip: 10.42.5.182
    ports:
      - port: 9092
