saude-homolog-isac-bigdata/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: isachomolog-ingress
  namespace: cuidar-isac-hml
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - isac-homolog.bigdatasys.net
      secretName: isachomolog-tls
  rules:
    - host: isac-homolog.bigdatasys.net
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: isachomolog-service
                port:
                  number: 80
